--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -39,19 +39,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tabItem"
-                    android:text="@string/tab_text_1" />
+                    android:text="@string/dine_out" />
 
                 <android.support.design.widget.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tabItem2"
-                    android:text="@string/tab_text_2" />
+                    android:text="@string/delivery" />
 
                 <android.support.design.widget.TabItem
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/tabItem3"
-                    android:text="@string/tab_text_3" />
+                    android:text="@string/take_away" />
 
             </android.support.design.widget.TabLayout>
         </android.support.design.widget.AppBarLayout>
