--- a/app/src/main/res/layout/fragment_restaurant_details.xml
+++ b/app/src/main/res/layout/fragment_restaurant_details.xml
@@ -34,6 +34,7 @@
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginStart="28dp"
                 app:expandedTitleMarginEnd="64dp"
+                app:title=" "
                 android:fitsSystemWindows="true">
 
                 <ImageView
