--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -2,9 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.soumya.wwdablu.zomatobuddy.activity.DashboardActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+
+    <item android:title="@string/search"
+        android:id="@+id/menu_source_search"
+        android:icon="@drawable/ic_search"
+        android:orderInCategory="110"
+        android:contentDescription="Performs the search operation"
+        app:showAsAction="always"
+        />
+
 </menu>
