--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#cb202d</color>
     <color name="colorPrimaryDark">#ab202d</color>
-    <color name="colorAccent">#FFFF00</color>
+    <color name="colorAccent">#cb202d</color>
 
     <color name="actvityBg">#f4f4f2</color>
     <color name="somewhatBlack">#2d2d2d</color>
