--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -12,7 +12,7 @@
         android:layout_gravity="center"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/pureWhite"
+        android:textColor="@android:color/white"
         />
 
 </FrameLayout>
