--- a/app/src/main/res/layout-v21/fragment_categorylist.xml
+++ b/app/src/main/res/layout-v21/fragment_categorylist.xml
@@ -9,6 +9,7 @@
     </data>
 
     <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/sv_category_list"
         android:layout_width="match_parent"
@@ -72,6 +73,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginBottom="?attr/actionBarSize"
+                    android:nestedScrollingEnabled="false"
                     />
 
             </RelativeLayout>
