--- a/app/src/main/res/layout/item_rest_details.xml
+++ b/app/src/main/res/layout/item_rest_details.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/iv_item_icon"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
+                android:contentDescription="Item Icon"
                 />
 
             <TextView
