--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -33,7 +33,9 @@
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:tabMode="scrollable"
+                >
 
                 <android.support.design.widget.TabItem
                     android:layout_width="wrap_content"
@@ -52,6 +54,12 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/tabItem3"
                     android:text="@string/take_away" />
+
+                <android.support.design.widget.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tabItem4"
+                    android:text="@string/favourites" />
 
             </android.support.design.widget.TabLayout>
         </android.support.design.widget.AppBarLayout>
