--- a/app/src/main/res/layout/fragment_favlist.xml
+++ b/app/src/main/res/layout/fragment_favlist.xml
@@ -3,14 +3,14 @@
     <data>
 
         <variable
-            name="catViewModel"
-            type="com.soumya.wwdablu.zomatobuddy.viewmodel.CategoryViewModel"/>
+            name="favViewModel"
+            type="com.soumya.wwdablu.zomatobuddy.viewmodel.FavouritesViewModel"/>
 
     </data>
 
     <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/sv_category_list"
+        android:id="@+id/sv_fav_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/darker_gray"
@@ -19,14 +19,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/ll_cat_container"
+            android:id="@+id/ll_fav_container"
             android:orientation="vertical"
             >
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/cv_category_list"
+                android:id="@+id/cv_fav_list"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="16dp"
@@ -35,13 +35,13 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/rl_inner_container"
+                    android:id="@+id/rl_fav_inner_container"
                     >
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_category_header"
+                        android:id="@+id/tv_fav_header"
                         android:textColor="@android:color/black"
                         android:textSize="16sp"
                         android:textStyle="bold"
@@ -50,33 +50,34 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
                         android:layout_alignParentTop="true"
-                        android:text="@{catViewModel.headerTitle}"
+                        android:text="@{favViewModel.headerTitle}"
                         tools:text="Go out for lunch or dinner"
                         />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tv_category_sub_header"
+                        android:id="@+id/tv_fav_sub_header"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="12sp"
                         android:textStyle="bold"
                         android:gravity="center"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_below="@id/tv_category_header"
-                        android:text="@{catViewModel.headerSubTitle}"
+                        android:layout_below="@id/tv_fav_header"
+                        android:text="@{favViewModel.headerSubTitle}"
                         tools:text="Dine-out restaurants"
                         />
 
                     <android.support.v7.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/rv_category_restaurants"
-                        android:layout_below="@id/tv_category_sub_header"
+                        android:id="@+id/rv_fav_restaurants"
+                        android:layout_below="@id/tv_fav_sub_header"
                         android:layout_marginTop="16dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
+                        android:nestedScrollingEnabled="false"
                         />
 
                 </RelativeLayout>
@@ -86,7 +87,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tv_powered_by"
+                android:id="@+id/tv_fav_powered_by"
                 android:drawableStart="@drawable/ic_red_heart"
                 android:text="@string/powered_by_zomato_api"
                 android:textSize="16sp"
