--- a/app/src/main/res/layout-v21/fragment_favlist.xml
+++ b/app/src/main/res/layout-v21/fragment_favlist.xml
@@ -77,6 +77,7 @@
                         android:layout_marginTop="16dp"
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="8dp"
+                        android:nestedScrollingEnabled="false"
                         />
 
                 </RelativeLayout>
