--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -18,4 +18,15 @@
         android:layout_gravity="center"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/using_zomato_developer_api"
+        android:fontFamily="@font/metropolis_thin"
+        android:textSize="16sp"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="16dp"
+        android:textColor="@color/white"
+        />
+
 </FrameLayout>
