--- a/app/src/main/res/layout/activity_location_access_permission.xml
+++ b/app/src/main/res/layout/activity_location_access_permission.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,6 +14,8 @@
         android:src="@drawable/ic_access_location"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/space_10"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -26,6 +28,8 @@
         android:textColor="@color/black"
         android:textSize="@dimen/font_5"
         android:layout_gravity="center"
+        android:layout_below="@id/iv_access_location"
+        android:layout_centerHorizontal="true"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -42,7 +46,8 @@
         android:layout_marginEnd="@dimen/space_15"
         android:paddingStart="@dimen/space_2"
         android:paddingEnd="@dimen/space_2"
-        android:layout_gravity="center"
+        android:layout_below="@id/tv_hi_there"
+        android:layout_centerHorizontal="true"
         />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -57,6 +62,7 @@
         android:layout_marginTop="@dimen/space_10"
         android:layout_marginStart="@dimen/space_5"
         android:layout_marginEnd="@dimen/space_5"
+        android:layout_below="@id/tv_set_your_location"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -74,6 +80,28 @@
         android:paddingStart="@dimen/space_2"
         android:paddingEnd="@dimen/space_2"
         android:layout_gravity="center"
+        android:layout_below="@id/btn_auto_location"
+        android:layout_centerHorizontal="true"
         />
 
-</LinearLayout>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_location_disclaimer"
+        android:text="@string/location_disclaimer"
+        android:fontFamily="@font/metropolis_medium"
+        android:textColor="@color/gray"
+        android:textAllCaps="false"
+        android:textAlignment="center"
+        android:layout_marginTop="@dimen/space_5"
+        android:layout_marginStart="@dimen/space_5"
+        android:layout_marginEnd="@dimen/space_5"
+        android:paddingStart="@dimen/space_2"
+        android:paddingEnd="@dimen/space_2"
+        android:layout_gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/space_12"
+        android:layout_centerHorizontal="true"
+        />
+
+</RelativeLayout>
