--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
 
     <color name="pureBlack">#000000</color>
     <color name="black">#2D2D2D</color>
+    <color name="gray">#6E6E6E</color>
     <color name="white">#FFFFFF</color>
     <color name="tyrolean">#F4F4F2</color>
 
