--- a/app/src/main/res/layout/frag_dining.xml
+++ b/app/src/main/res/layout/frag_dining.xml
@@ -73,6 +73,19 @@
 
             <!-- Collections end -->
 
+            <!-- Trending this week - start -->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/rv_recommended_for_you"
+                android:text="@string/recommended_for_you"
+                android:textColor="@color/black"
+                android:textSize="@dimen/font_5"
+                android:fontFamily="@font/metropolis_semibold"
+                android:layout_margin="@dimen/space_3"
+                />
+            <!-- Trending this week - end -->
+
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
