--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -14,13 +14,12 @@
         android:layout_above="@id/bnv_bottom_menu"
         />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
+    <com.soumya.wwdablu.hungry.customview.HungryBottomNaviView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/bnv_bottom_menu"
         android:layout_alignParentBottom="true"
         android:background="@color/tyrolean"
-        app:menu="@menu/bottom_nav_menu"
         app:itemTextColor="@color/ic_menu_icon_colors"
         app:itemIconTint="@color/ic_menu_icon_colors"
         />
