--- a/app/src/main/res/layout/item_recommended.xml
+++ b/app/src/main/res/layout/item_recommended.xml
@@ -70,8 +70,13 @@
             android:fontFamily="@font/metropolis_regular"
             android:textSize="@dimen/font_3"
             android:textColor="@color/gray"
+            android:maxLines="1"
+            android:textAlignment="textStart"
             android:layout_below="@id/res_name"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="@dimen/space_3"
+            android:layout_marginEnd="@dimen/space_3"
+            android:layout_toStartOf="@id/res_avg_cost"
             tools:text="Indian, Japanese"
             />
 
@@ -82,6 +87,7 @@
             android:fontFamily="@font/metropolis_regular"
             android:textSize="@dimen/font_3"
             android:textColor="@color/gray"
+            android:maxLines="1"
             android:layout_below="@id/res_name"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="@dimen/space_3"
