Show images in fullscreen

--- a/app/src/main/res/layout/activity_location_access_permission.xml
+++ b/app/src/main/res/layout/activity_location_access_permission.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.LocationAccessPermission">
+    tools:context=".activity.LocationAccess">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="250dp"
