--- a/app/src/main/res/layout/activity_collection_details.xml
+++ b/app/src/main/res/layout/activity_collection_details.xml
@@ -12,7 +12,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CollectionDetailsActivity">
+        tools:context=".activity.CollectionDetailsActivity">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
