--- a/app/src/main/res/layout/activity_collection_details.xml
+++ b/app/src/main/res/layout/activity_collection_details.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="collectionModel"
-            type="com.soumya.wwdablu.hungry.model.network.collections.CollectionInfo" />
+            type="com.soumya.wwdablu.hungry.network.model.collections.CollectionInfo" />
     </data>
 
     <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
