--- a/app/src/main/res/layout/item_collection_long.xml
+++ b/app/src/main/res/layout/item_collection_long.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="collection"
-            type="com.soumya.wwdablu.hungry.model.network.collections.CollectionInfo" />
+            type="com.soumya.wwdablu.hungry.network.model.collections.CollectionInfo" />
     </data>
 
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
