--- a/app/src/main/res/layout/item_search_cuisine.xml
+++ b/app/src/main/res/layout/item_search_cuisine.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="cuisine"
-            type="com.soumya.wwdablu.hungry.model.network.cuisine.Cuisine" />
+            type="com.soumya.wwdablu.hungry.network.model.cuisine.Cuisine" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
